--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -29,9 +29,10 @@
       <form action="/contact" method="post" class="mt-6">
         <input type="text" name="name" id="contact-name" placeholder="Name" class="mb-5 pb-3 pl-2 border-b-4 border-b-violet-500 w-80 mx-auto" autocomplete="off">
         <input type="email" name="email" id="contact-email" placeholder="Email" class="mb-5 p-2 border-b-4 border-b-violet-500 w-80 mx-auto" autocomplete="off">
-        <textarea name="message" id="contact-message" placeholder="Message" style="resize: none; width: 30rem; min-height: 6rem;" class="my-6 p-2 rounded border-2 border-gray-500 focus:border-violet-500"></textarea>
-        <button class="font-mono secondary-button ml-40 mb-8">Submit</button>
+        <textarea name="message" id="contact-message" placeholder="Message" style="resize: none; width: 40rem; min-height: 10rem;" class="my-6 p-2 rounded border-2 border-gray-500 focus:border-violet-500"></textarea>
+        <button class="font-mono secondary-button ml-60 mb-8">Submit</button>
       </form>
+      <script src="/contact.js"></script>
     </div>
   </section>
 </footer>
