--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -15,7 +15,7 @@
             <a href="" class="decoration-0 block pt-3 mb-2 text-white hover:text-inherit" id="user-posts-button">Posts</a>
           </div>
         </li>
-        <li class="p-4"><i class="fas fa-power-off hover:cursor-pointer"></i></li> 
+        <li class="p-4"><a href="" id="logout-button"><i class="fas fa-power-off hover:cursor-pointer"></i></a></li> 
       </ul>
     </div>
   </nav>
